A commit to save changes before flipping requireJS structure upside down

--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -1,2 +1,6 @@
+<!-- Emperor View -->
 <h1>This is the Emperor view</h1>
+{{view "InputField" valueBinding="isbnInput" }} <!-- this searches the controller an InputField - see EmperorController -->
+{{isbnInput}}
+
 {{outlet}} <!-- A view within a view; everything else goes here -->
