--- a/display/templates/start.handlebars
+++ b/display/templates/start.handlebars
@@ -1,3 +1,2 @@
 <h1>This is the Start view</h1>
-{{view Ember.TextField placeholder="ISBN13" valueBinding="isbnInput"}}
-{{isbnInput}}
+<p>This is a placeholder for a list of recent activity on BellBook that will go after the fold.</p>
