--- a/display/templates/start.handlebars
+++ b/display/templates/start.handlebars
@@ -1,2 +1,8 @@
-<h1>This is the Start view</h1>
-<p>This is a placeholder for a list of recent activity on BellBook that will go after the fold.</p>
+
+<!-- Start View: Rendering Context = Start Controller Singleton -->
+
+<!-- shown beneath the fold -->
+<div id="start">
+	<h1>This is the Start view</h1>
+	<p>This is a placeholder for a list of recent activity on BellBook that will go after the fold.</p>
+</div>
