Added book route/page, clarified role of contexts in Ember.js

--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -5,6 +5,7 @@
 	<h1>This is the Emperor view</h1>
 	<p>This is a placeholder for the start page - the first page a user will see if he/she has yet to post/buy any books;</p>
 	<p>Asks for an ISBN and then transitions to the book-id page.</p>
+	<p>TODO: Validation, Design</p>
 
 	<!-- Target: Emperor Controller -->
 	<div id="input-field-block">
