--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -1,7 +1,10 @@
 
-<!-- Emperor View: Rendering Context = Emperor Controller Singleton -->
 
-<div id="full-page-input-area"> <!-- that container which contains the prompt and text box -->
+
+
+
+<!-- Emperor View: Rendering Context = Emperor Controller Singleton -->
+<div id="input-area" {{bindAttr class="inputAreaType"}} > <!-- that container which contains the prompt and text box -->
 	<h1>This is the Emperor view</h1>
 	<p>This is a placeholder for the start page - the first page a user will see if he/she has yet to post/buy any books;</p>
 	<p>Asks for an ISBN and then transitions to the book-id page.</p>
