--- a/display/css/style.css
+++ b/display/css/style.css
@@ -21,20 +21,36 @@ div {
   position: relative;
 }
 
-div#full-page-input-area {
-  height: 100%;
-  width: 100%;
+div#input-area {
   background-color: #EBF1FF;
+}
+
+div#input-area.full { /* The search area takes up the entire area above the fold --> /start */ 
+  width: 100%;
+  height: 100%;
+}
+
+div#input-area.mid { /* The search area takes up just the top 3rd of the fold --> /book/isbn */
+  width: 100%;
+  height: 25%;
 }
     
     div#input-field-block {
       position: absolute;
-      top: 45%; left: 50%;
-      height: 100px;
+      left: 50%;
+      height: 80px;
       width: 300px;
-      margin-top:-50px;
       margin-left: -150px;
       overflow: visible;
+    }
+
+    .full div#input-field-block {
+      top: 45%;
+      margin-top:-40px; /* half of height */
+    }
+
+    .mid div#input-field-block {
+      bottom: 10px;
     }
 
       label#input-field-label {
