Added some more things.

--- a/display/templates/book.handlebars
+++ b/display/templates/book.handlebars
@@ -29,6 +29,7 @@
 		<!-- else, well, that sucks. -->
 	  	<p>No book found. You can blame Google. TODO: take the blame out</p>
 	{{/if}}
-
+	<hr />
+	<p>Data courtesy of the allmighty Google. TODO: adhere to Google Books API <a href="https://developers.google.com/books/branding">Branding guidelines</a>. </p>
 	
 </div>
