--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -13,7 +13,7 @@
 	<!-- Target: Emperor Controller -->
 	<div id="input-field-block">
 	<label id="input-field-label"> Enter your ISBN here:
-		{{view Ember.TextField id="input-field" placeholder="ISBN13" valueBinding="isbnInput" target=this action="openBookWithInputField" insertNewline=sendAction }} 
+		{{view Ember.TextField id="input-field" placeholder="ISBN13" valueBinding="isbnInput" }} 
 	</label>
 	</div>
 	<br/>
