Fixed Javascript errors while loading books.

--- a/display/templates/book.handlebars
+++ b/display/templates/book.handlebars
@@ -21,7 +21,7 @@
 		</p>
 		<p>publisher: {{representedBook.publisher}}</p>
 		{{#if representedBook.imageLinkSmall}}
-			<img {{bindAttr src="representedBook.imageLinkSmall"}} />
+			<img src="{{unbound representedBook.imageLinkSmall}}" />
 		{{else}}
 			<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/No_image_available.svg/600px-No_image_available.svg.png" />
 		{{/if}}
