Fixed list loading issues, and fixed issue #6

--- a/display/templates/list.handlebars
+++ b/display/templates/list.handlebars
@@ -1,5 +1,7 @@
 
 <!-- List View: Rendering Context = List Controller Singleton -->
-<!--  -->
+<!-- exposed variables: content (subclass of Book model), representedBook of book view  -->
 
 <h1>This is a list!</h1>
+
+{{representedBook.title}} 
