--- a/display/css/style.css
+++ b/display/css/style.css
@@ -34,7 +34,13 @@ div#input-area.mid { /* The search area takes up just the top 3rd of the fold --
   width: 100%;
   height: 25%;
 }
-    
+          
+div#input-area.basic { /* The search area takes up just the top of the side bar */
+  width: 300px;
+  height: 50px;
+  float: left;
+}
+
     div#input-field-block {
       position: absolute;
       left: 50%;
@@ -61,6 +67,7 @@ div#input-area.mid { /* The search area takes up just the top 3rd of the fold --
         width: 100%;
         height: 40px;
       }
+
 
 div#start {
   height: 500px;
