--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -18,7 +18,10 @@
 	</div>
 	<br/>
 	<h4>Data:</h4>Entered ISBN: {{isbnInput}}
+
+
+{{outlet inputArea}} <!-- A view within a view; everything else goes here. This outlet is contained inside the search bar area, and will be displayed accordingly -->
+
 </div>
 
-
-{{outlet}} <!-- A view within a view; everything else goes here -->
+{{outlet mainArea}} <!-- A view within a view; everything else goes here. This outlet lives outside the search bar area. -->
