Redid UI a bit to make it easier to reposition emperor and book views.

--- a/display/css/style.css
+++ b/display/css/style.css
@@ -32,12 +32,12 @@ div#input-area.full { /* The search area takes up the entire area above the fold
 
 div#input-area.mid { /* The search area takes up just the top 3rd of the fold --> /book/isbn */
   width: 100%;
-  height: 25%;
+  height: 100%;
 }
           
 div#input-area.basic { /* The search area takes up just the top of the side bar */
   width: 300px;
-  height: 50px;
+  height: 100%;
   float: left;
 }
 
@@ -56,7 +56,9 @@ div#input-area.basic { /* The search area takes up just the top of the side bar 
     }
 
     .mid div#input-field-block {
-      bottom: 10px;
+      top: 50%;
+      height: 400px;
+      margin-top: -200px;
     }
 
       label#input-field-label {
@@ -66,6 +68,10 @@ div#input-area.basic { /* The search area takes up just the top of the side bar 
       input#input-field {
         width: 100%;
         height: 40px;
+      }
+
+      .mid div#book {
+        
       }
 
 
