--- a/display/css/style.css
+++ b/display/css/style.css
@@ -10,7 +10,6 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 html, body, section.fill, div.fill {
   width: 100%;
   height: 100%;
-  background-color: #EBFFF0;
 }
 
 body {
@@ -37,8 +36,9 @@ div#input-area.mid { /* The search area takes up just the top 3rd of the fold --
           
 div#input-area.basic { /* The search area takes up just the top of the side bar */
   width: 300px;
-  height: 100%;
+  min-height: 100%;
   float: left;
+  left: 0px;
 }
 
     div#input-field-block {
@@ -61,21 +61,41 @@ div#input-area.basic { /* The search area takes up just the top of the side bar 
       margin-top: -200px;
     }
 
-      label#input-field-label {
-        line-height: 2em;
-      }
+        label#input-field-label {
+          line-height: 2em;
+        }
 
-      input#input-field {
-        width: 100%;
-        height: 40px;
-      }
+        input#input-field {
+          width: 100%;
+          height: 40px;
+        }
 
-      .mid div#book {
-        
-      }
+        .mid div#book {
 
+        }
 
-div#start {
-  height: 500px;
-  margin-bottom: 100px;
+div#main-area {
+  background-color: #EBFFF0;
 }
+
+div#main-area.full, div#main-area.mid { 
+}
+
+div#main-area.basic { /* The search area takes up just the top of the side bar */
+  position: absolute;
+  left: 300px;
+  right: 0px;
+  margin: 0;
+  top: 0px;
+  min-height: 100%;
+}
+
+
+    div#start {
+      height: 500px;
+      margin-bottom: 100px;
+    }
+
+
+
+
