--- a/display/templates/list.handlebars
+++ b/display/templates/list.handlebars
@@ -3,5 +3,9 @@
 <!-- exposed variables: content (subclass of Book model), representedBook of book view  -->
 
 <h1>This is a list!</h1>
+<h1>This is a list!</h1>
+<h1>This is a list!</h1>
+<h1>This is a list!</h1>
+<h1>This is a list!</h1>
 
-{{representedBook.title}} 
+ISBN: {{representedISBN}} 
