--- a/display/templates/emperor.handlebars
+++ b/display/templates/emperor.handlebars
@@ -13,7 +13,7 @@
 	<!-- Target: Emperor Controller -->
 	<div id="input-field-block">
 	<label id="input-field-label"> Enter your ISBN here:
-		{{view Ember.TextField id="input-field" placeholder="ISBN13" valueBinding="isbnInput" }} 
+		{{view Ember.TextField id="input-field" placeholder="ISBN" valueBinding="isbnInput" }} 
 	</label>
 
 	{{outlet inputArea}} <!-- A view within a view; This outlet is contained inside the search bar area, and will be displayed accordingly -->
