--- a/display/templates/start.handlebars
+++ b/display/templates/start.handlebars
@@ -5,4 +5,6 @@
 <div id="start">
 	<h1>This is the Start view</h1>
 	<p>This is a placeholder for a list of recent activity on BellBook that will go after the fold.</p>
+	<p>More specifically, recently posted listings, and recently completed transactions</p>
+	<p>(users can, of course, easily mark transactions as private, and no details will be shown)</p>
 </div>
